name:                token-bucket
version:             0.1.0.0
synopsis:            A token bucket implementation
description:
    A TCP implementation of the token bucket algorithm. A single
    server instance may be used for rate limiting several
    applications.
license:             MIT
license-file:        LICENSE
author:              Justin Leitgeb
homepage:            https://github.com/stackbuilders/token-bucket
maintainer:          justin@stackbuilders.com
copyright:           2014 Stack Builders Inc.
category:            Network
build-type:          Simple
cabal-version:       >=1.10

executable token-bucket-server
  main-is:             Main.hs

  other-modules:         Network.TokenBucket.Parser
                       , Network.TokenBucket.Server

  build-depends:         base >=4.6 && <4.8
                       , network >=2.6 && <2.7
                       , containers >=0.5 && <0.6
                       , attoparsec >=0.11 && <0.12
                       , text >=1.1.1.3 && <1.1.2
                       , scientific >=0.3.1 && <0.4

  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs -O2

test-suite token-bucket-test
  type: exitcode-stdio-1.0
  hs-source-dirs: spec, src
  main-is: Spec.hs
  build-depends:       base >=4.6 && <4.8
                     , attoparsec >=0.11 && <0.12
                     , text >=1.1.1.3 && <1.1.2
                     , QuickCheck >=2 && <3
                     , scientific >=0.3.1 && <0.4

                     , hspec2

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stackbuilders/token-bucket
